--- a/src/components/ComicBoard/ComicBoard.module.css
+++ b/src/components/ComicBoard/ComicBoard.module.css
@@ -1,3 +1,15 @@
 canvas {
   border: 1px solid black;
 }
+
+.pageView {
+  height: 80px;
+  width: 60%;
+  border: 1px solid black;
+}
+
+.textBox {
+  position: absolute;
+  width: 30px;
+  height: auto;
+}
